<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.pivotalsoft.pivotallearning.WalletActivity">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        card_view:cardBackgroundColor="#fff"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="6dp"
        card_view:contentPadding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_inr" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="Wallet Points"
                    android:textColor="#3f3f48"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:gravity="bottom"
                android:orientation="horizontal"
                tools:ignore="RtlHardcoded,UselessParent">

                <ImageView
                    android:id="@+id/imageView123"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginBottom="15dp"
                    app:srcCompat="@drawable/ic_rupee_indian_wallet" />

                <TextView
                    android:id="@+id/txtTotalBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="0"
                    android:textColor="#3f3f48"
                    android:textSize="65sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/invite_friends_and_earn_points"
                android:textColor="#3f3f48" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="#2b181818" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayoutEarn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_earn_more" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="Earn More"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#2b181818" />


                <LinearLayout
                    android:id="@+id/linearLayoutHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_trophy_history" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="Earning History"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/earnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        card_view:cardBackgroundColor="#fff"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="4dp"
        card_view:cardMaxElevation="6dp"
        card_view:contentPadding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/share_your_referral_code" />


                <TextView
                    android:id="@+id/txtReferral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="32456"
                    android:textStyle="bold"
                    android:textIsSelectable="true"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textColor="@android:color/black"
                    android:background="@drawable/rectangular_shape1"/>


                <Button
                    android:id="@+id/btnInvite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_your_friend"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_corners"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Invite your friends using your Referral code . you can get 1000 rupees and your friend get 2000 rupees Referral bonus. "
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"/>


            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/historyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="5dp">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerHistory">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>


</LinearLayout>
